# minivm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang-debug-compile.bat  clang-debug-init.bat  clang-run.bat  compile_commands.json  ninja-debug-compile.bat  ninja-debug-init.bat  ninja-run.bat
.cache/clangd/index/: main.cpp.898C4D7271EB3B25.idx  vm.cpp.8FCA20C7819D6A4A.idx  vm.hpp.61A41A83B233A38F.idx
docs/: Instructions.md
repl/: CMakeLists.txt
repl/src/: main.cpp
samples/: sample.mvma
vm/: CMakeLists.txt
vm/include/minivm/: vm.hpp  vm_binding.hpp  vm_utils.hpp
vm/src/: execution_context.cpp  vm.cpp
