cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
set (CMAKE_CXX_STANDARD 17)

project(minivm LANGUAGES CXX)

set(BINARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR}_${CMAKE_CXX_COMPILER_ID}/${CMAKE_BUILD_TYPE})
# set(EXECUTABLE_OUTPUT_PATH "${BINARY_OUTPUT_DIRECTORY}" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}")

add_subdirectory(vm)
add_subdirectory(repl)
